--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.3.11",
     "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
