--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "sqlite": "^4.1.1",
     "three": "^0.141.0"
   },
   "devDependencies": {
